# kivi

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  server.rs
src/core/: config.rs  error.rs  kv.rs  lexer.rs  mod.rs  token.rs
